--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Práctica de JS</title>
 </head>
 <body>
-    <script src="js/02-ejercicio-inicial.js"></script>
+    <script src="js/05-guia2-ej5.js"></script>
 </body>
 </html>
