--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Práctica de JS</title>
 </head>
 <body>
-    <script src="js/15-guia4-ej10.js"></script>
+    <script src="js/18-guia5-ej1y9.js"></script>
 </body>
 </html>
